RESOLVED FIXED 140752
BytecodeGenerator shouldn't expose all of its member variables
https://bugs.webkit.org/show_bug.cgi?id=140752
Summary BytecodeGenerator shouldn't expose all of its member variables
Ryosuke Niwa
Reported 2015-01-21 17:49:37 PST
Right now, all m_* members of BytecodeGenerator are public. We should make them private.
Attachments
Fixes the bug (4.00 KB, patch)
2015-01-21 17:52 PST, Ryosuke Niwa
mark.lam: review+
Ryosuke Niwa
Comment 1 2015-01-21 17:52:51 PST
Created attachment 245103 [details] Fixes the bug
Mark Lam
Comment 2 2015-01-21 17:55:07 PST
Comment on attachment 245103 [details] Fixes the bug r=me
Ryosuke Niwa
Comment 3 2015-01-21 18:06:27 PST
Note You need to log in before you can comment on or make changes to this bug.