BytecodeGenerator shouldn't expose all of its member variables https://bugs.webkit.org/show_bug.cgi?id=140752

Reviewed by Mark Lam.

Added "private:" and removed unused data members as detected by clang.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::BytecodeGenerator):
* bytecompiler/BytecodeGenerator.h:
(JSC::BytecodeGenerator::lastOpcodeID): Added. Used in BinaryOpNode::emitBytecode.
* bytecompiler/NodesCodegen.cpp:
(JSC::BinaryOpNode::emitBytecode):


Canonical link: https://commits.webkit.org/158737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178882 268f45cc-cd09-0410-ab3c-d52691b4dbfc